<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ivImageContainer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/pic_circle"/>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        android:elevation="8dp"
        app:tint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/ivImageContainer"
        app:layout_constraintTop_toTopOf="@+id/ivImageContainer" />

    <!-- cv типа customView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvThemeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageContainer"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/btnTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:src="@drawable/ic_double_arrow_down"
            app:tint="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvThemes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_theme" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfTitle"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvThemeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHintNotificationTitle"
        style="@style/NotificationHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_notification_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfMessage"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHintNotificationTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHintNotificationMessage"
        style="@style/NotificationHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_notification_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfMessage" />

    <Spinner
        android:id="@+id/importanceSpinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHintNotificationMessage" />

    <Button
        android:id="@+id/btnShowNotification"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_show_notification_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importanceSpinner" />

    <Button
        android:id="@+id/btnSetDefaultTheme"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_set_default_theme_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowNotification" />

</androidx.constraintlayout.widget.ConstraintLayout>